Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-16127

QCommonStyle::drawControl() does not call subElementRect() on the proxy() when drawing the CE_ItemViewItem case

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.8.0
    • 4.7.1
    • GUI: Look'n'Feel
    • None
    • 912e8a2c90a200300feaef18beedd4e6af3e8623

      QCommonStyle::drawControl() does not call subElementRect() on the proxy() when drawing the CE_ItemViewItem case.

      Patch to fix this is attached.

        1. patch.diff
          0.6 kB
          Andy Shaw (closed Nokia identity)
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bachewii Jens
            anshaw Andy Shaw (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes