Draw focusrect through style proxy

This function call was simply not converted to use the new proxy
style, hence preventing people from overriding it properly.

Reviewed-by: Andy Shaw
Task-number: QTBUG-16127